<resources>
    <string name="app_name">Opensooq</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="close">close</string>
    <string name="Categories">Select Categories</string>
    <string name="image">Image</string>
    <string name="select_subcategory">Select Subcategory</string>
    <string name="search_for_category_or_subcategory">search for category or subcategory</string>
    <string name="search_for_subcategory">search for subcategory</string>
    <string name="filter">Filter</string>
    <string name="image_icon">Image Icon</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="cancel">Cancel</string>
    <string name="any">Any</string>
    <string name="arrow_forward">Arrow forward</string>
    <string name="done">Done</string>
    <string name="reset">Reset</string>
</resources>