<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Title Row -->
        <TextView
            android:id="@+id/list_Numeric_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp"
            android:padding="8dp"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/rose" />

        <!-- From Row -->
        <LinearLayout
            android:id="@+id/from_row_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/from_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/from"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/from_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="8dp"
                android:text="@string/any"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/rose" />

        <!-- To Row -->
        <LinearLayout
            android:id="@+id/to_row_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/to_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to"
                android:textSize="14sp"
                android:padding="8dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/to_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="8dp"
                android:text="@string/any"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>